# mwl

./: .gitignore  Cargo.toml  schema.sql
scripts/: dbinit.sh
src/: contexts.rs  db.rs  forms.rs  main.rs
static/css/: main.css
templates/: 404.html.hbs  index.html.hbs  login.html.hbs
